--- a/Inference/Scripts/CreateFeatureStoreTableProgramatically.ipynb
+++ b/Inference/Scripts/CreateFeatureStoreTableProgramatically.ipynb
@@ -2,20 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "id": "32a8425a-8c5f-4c6d-afec-a996f080c643",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "from botocore.exceptions import ClientError\n",
+    "import json\n",
+    "\n",
+    "def get_secret():\n",
+    "\n",
+    "    secret_name = \"DBCreds\"\n",
+    "    region_name = \"us-east-1\"\n",
+    "\n",
+    "    # Create a Secrets Manager client\n",
+    "    session = boto3.session.Session()\n",
+    "    client = session.client(\n",
+    "        service_name='secretsmanager',\n",
+    "        region_name=region_name\n",
+    "    )\n",
+    "\n",
+    "    try:\n",
+    "        get_secret_value_response = client.get_secret_value(\n",
+    "            SecretId=secret_name\n",
+    "        )\n",
+    "    except ClientError as e:\n",
+    "        raise e\n",
+    "\n",
+    "    secret = get_secret_value_response['SecretString']\n",
+    "    \n",
+    "    # Parse the secret string to get the credentials\n",
+    "    secret_dict = json.loads(secret)\n",
+    "    username = secret_dict['username']\n",
+    "    password = secret_dict['password']\n",
+    "    host = secret_dict['host']\n",
+    "    port = secret_dict['port']\n",
+    "    dbname = secret_dict['dbname']\n",
+    "\n",
+    "    return username, password, host, port, dbname\n",
+    "\n",
+    "\n",
+    "(user,pswd,host,port,db) = get_secret()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "63a2175b-22ac-4459-bd78-1d220f932f9d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total records after processing: 0\n",
-      "Table malware_data created with uid as primary key successfully.\n",
-      "Time taken to create the table with column names: 0.03664398193359375 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sqlalchemy import create_engine, text\n",
@@ -59,11 +95,11 @@
     "columns_df = pd.DataFrame(columns=df.columns)\n",
     "print(f\"Total records after processing: {len(columns_df)}\")\n",
     "\n",
-    "hostname = '*'\n",
-    "port = 5432\n",
-    "username = '*'\n",
-    "password = '*'\n",
-    "database = '*'\n",
+    "hostname = host\n",
+    "port = port\n",
+    "username = user\n",
+    "password = pswd\n",
+    "database = db\n",
     "\n",
     "conn = psycopg2.connect(\n",
     "    host=hostname,\n",
@@ -84,7 +120,7 @@
     "create_table_query = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS malware_data (\n",
     "    uid VARCHAR PRIMARY KEY,\n",
-    "    datatype INT,\n",
+    "    datatype VARCHAR,\n",
     "    {', '.join([f\"{col} DOUBLE PRECISION\" for col in df.columns if col not in ['uid', 'datatype']])}\n",
     ");\n",
     "\"\"\"\n",
