--- a/Inference/Scripts/CreateInterfaceService.ipynb
+++ b/Inference/Scripts/CreateInterfaceService.ipynb
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "9a635267-5531-4cb0-983f-5b6c125507e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"test\"\n",
+    "name = \"lrc\"\n",
     "namespace = utils.get_default_target_namespace()\n",
     "kserve_version='v1beta1'\n",
     "api_version = constants.KSERVE_GROUP + '/' + kserve_version\n",
@@ -40,16 +40,16 @@
     "        predictor=V1beta1PredictorSpec(\n",
     "            service_account_name=\"s3-service-account\",\n",
     "            sklearn=V1beta1SKLearnSpec(\n",
-    "                storage_uri=\"*\"\n",
+    "                storage_uri=\"s3://mlpipelineews/version1/lrc/model.pkl\"\n",
     "            )\n",
     "        )\n",
     "    )\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "5f62e55c-3103-4a19-804f-b4be3e532dc6",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
        "{'apiVersion': 'serving.kserve.io/v1beta1',\n",
        " 'kind': 'InferenceService',\n",
        " 'metadata': {'annotations': {'sidecar.istio.io/inject': 'false'},\n",
-       "  'creationTimestamp': '2024-07-09T13:30:33Z',\n",
+       "  'creationTimestamp': '2024-07-10T15:50:38Z',\n",
        "  'generation': 1,\n",
        "  'managedFields': [{'apiVersion': 'serving.kserve.io/v1beta1',\n",
        "    'fieldsType': 'FieldsV1',\n",
@@ -71,21 +71,21 @@
        "       'f:sklearn': {'.': {}, 'f:name': {}, 'f:storageUri': {}}}}},\n",
        "    'manager': 'OpenAPI-Generator',\n",
        "    'operation': 'Update',\n",
-       "    'time': '2024-07-09T13:30:31Z'}],\n",
-       "  'name': 'test',\n",
+       "    'time': '2024-07-10T15:50:36Z'}],\n",
+       "  'name': 'lrc',\n",
        "  'namespace': 'kubeflow-user-example-com',\n",
-       "  'resourceVersion': '4496030',\n",
-       "  'uid': '56418763-d013-4751-a9c9-9217afc87c58'},\n",
+       "  'resourceVersion': '4968489',\n",
+       "  'uid': 'def9a850-3278-4096-8913-cb692128571d'},\n",
        " 'spec': {'predictor': {'model': {'modelFormat': {'name': 'sklearn'},\n",
        "    'name': '',\n",
        "    'protocolVersion': 'v1',\n",
        "    'resources': {},\n",
        "    'runtime': 'kserve-sklearnserver',\n",
-       "    'storageUri': 's3://mlpipelineews/version1/dtc/model.pkl'},\n",
+       "    'storageUri': 's3://mlpipelineews/version1/lrc/model.pkl'},\n",
        "   'serviceAccountName': 's3-service-account'}}}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "4b2a4b2e-34a2-4fa3-bb0a-9e0fd1e05451",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'apiVersion': 'serving.kserve.io/v1beta1', 'kind': 'InferenceService', 'metadata': {'annotations': {'sidecar.istio.io/inject': 'false'}, 'creationTimestamp': '2024-07-09T13:30:33Z', 'finalizers': ['inferenceservice.finalizers'], 'generation': 1, 'managedFields': [{'apiVersion': 'serving.kserve.io/v1beta1', 'fieldsType': 'FieldsV1', 'fieldsV1': {'f:metadata': {'f:annotations': {'.': {}, 'f:sidecar.istio.io/inject': {}}}, 'f:spec': {'.': {}, 'f:predictor': {'.': {}, 'f:serviceAccountName': {}, 'f:sklearn': {'.': {}, 'f:name': {}, 'f:storageUri': {}}}}}, 'manager': 'OpenAPI-Generator', 'operation': 'Update', 'time': '2024-07-09T13:30:31Z'}, {'apiVersion': 'serving.kserve.io/v1beta1', 'fieldsType': 'FieldsV1', 'fieldsV1': {'f:metadata': {'f:finalizers': {'.': {}, 'v:\"inferenceservice.finalizers\"': {}}}}, 'manager': 'manager', 'operation': 'Update', 'time': '2024-07-09T13:30:33Z'}, {'apiVersion': 'serving.kserve.io/v1beta1', 'fieldsType': 'FieldsV1', 'fieldsV1': {'f:status': {'.': {}, 'f:components': {'.': {}, 'f:predictor': {'.': {}, 'f:latestCreatedRevision': {}}}, 'f:conditions': {}}}, 'manager': 'manager', 'operation': 'Update', 'subresource': 'status', 'time': '2024-07-09T13:30:36Z'}], 'name': 'test', 'namespace': 'kubeflow-user-example-com', 'resourceVersion': '4496088', 'uid': '56418763-d013-4751-a9c9-9217afc87c58'}, 'spec': {'predictor': {'model': {'modelFormat': {'name': 'sklearn'}, 'name': '', 'protocolVersion': 'v1', 'resources': {}, 'runtime': 'kserve-sklearnserver', 'storageUri': 's3://mlpipelineews/version1/dtc/model.pkl'}, 'serviceAccountName': 's3-service-account'}}, 'status': {'components': {'predictor': {'latestCreatedRevision': 'test-predictor-default-00001'}}, 'conditions': [{'lastTransitionTime': '2024-07-09T13:30:36Z', 'severity': 'Info', 'status': 'Unknown', 'type': 'PredictorConfigurationReady'}, {'lastTransitionTime': '2024-07-09T13:30:36Z', 'message': 'Configuration \"test-predictor-default\" is waiting for a Revision to become ready.', 'reason': 'RevisionMissing', 'status': 'Unknown', 'type': 'PredictorReady'}, {'lastTransitionTime': '2024-07-09T13:30:36Z', 'message': 'Configuration \"test-predictor-default\" is waiting for a Revision to become ready.', 'reason': 'RevisionMissing', 'severity': 'Info', 'status': 'Unknown', 'type': 'PredictorRouteReady'}, {'lastTransitionTime': '2024-07-09T13:30:36Z', 'message': 'Configuration \"test-predictor-default\" is waiting for a Revision to become ready.', 'reason': 'RevisionMissing', 'status': 'Unknown', 'type': 'Ready'}]}}\n"
+      "{'apiVersion': 'serving.kserve.io/v1beta1', 'kind': 'InferenceService', 'metadata': {'annotations': {'sidecar.istio.io/inject': 'false'}, 'creationTimestamp': '2024-07-10T15:50:38Z', 'finalizers': ['inferenceservice.finalizers'], 'generation': 1, 'managedFields': [{'apiVersion': 'serving.kserve.io/v1beta1', 'fieldsType': 'FieldsV1', 'fieldsV1': {'f:metadata': {'f:annotations': {'.': {}, 'f:sidecar.istio.io/inject': {}}}, 'f:spec': {'.': {}, 'f:predictor': {'.': {}, 'f:serviceAccountName': {}, 'f:sklearn': {'.': {}, 'f:name': {}, 'f:storageUri': {}}}}}, 'manager': 'OpenAPI-Generator', 'operation': 'Update', 'time': '2024-07-10T15:50:36Z'}, {'apiVersion': 'serving.kserve.io/v1beta1', 'fieldsType': 'FieldsV1', 'fieldsV1': {'f:metadata': {'f:finalizers': {'.': {}, 'v:\"inferenceservice.finalizers\"': {}}}}, 'manager': 'manager', 'operation': 'Update', 'time': '2024-07-10T15:50:38Z'}, {'apiVersion': 'serving.kserve.io/v1beta1', 'fieldsType': 'FieldsV1', 'fieldsV1': {'f:status': {'.': {}, 'f:address': {'.': {}, 'f:url': {}}, 'f:components': {'.': {}, 'f:predictor': {'.': {}, 'f:address': {'.': {}, 'f:url': {}}, 'f:latestCreatedRevision': {}, 'f:latestReadyRevision': {}, 'f:latestRolledoutRevision': {}, 'f:traffic': {}, 'f:url': {}}}, 'f:conditions': {}, 'f:url': {}}}, 'manager': 'manager', 'operation': 'Update', 'subresource': 'status', 'time': '2024-07-10T15:51:18Z'}], 'name': 'lrc', 'namespace': 'kubeflow-user-example-com', 'resourceVersion': '4968979', 'uid': 'def9a850-3278-4096-8913-cb692128571d'}, 'spec': {'predictor': {'model': {'modelFormat': {'name': 'sklearn'}, 'name': '', 'protocolVersion': 'v1', 'resources': {}, 'runtime': 'kserve-sklearnserver', 'storageUri': 's3://mlpipelineews/version1/lrc/model.pkl'}, 'serviceAccountName': 's3-service-account'}}, 'status': {'address': {'url': 'http://lrc.kubeflow-user-example-com.svc.cluster.local/v1/models/lrc:predict'}, 'components': {'predictor': {'address': {'url': 'http://lrc-predictor-default.kubeflow-user-example-com.svc.cluster.local'}, 'latestCreatedRevision': 'lrc-predictor-default-00001', 'latestReadyRevision': 'lrc-predictor-default-00001', 'latestRolledoutRevision': 'lrc-predictor-default-00001', 'traffic': [{'latestRevision': True, 'percent': 100, 'revisionName': 'lrc-predictor-default-00001'}], 'url': 'http://lrc-predictor-default.kubeflow-user-example-com.example.com'}}, 'conditions': [{'lastTransitionTime': '2024-07-10T15:51:18Z', 'status': 'True', 'type': 'IngressReady'}, {'lastTransitionTime': '2024-07-10T15:51:18Z', 'severity': 'Info', 'status': 'True', 'type': 'PredictorConfigurationReady'}, {'lastTransitionTime': '2024-07-10T15:51:18Z', 'status': 'True', 'type': 'PredictorReady'}, {'lastTransitionTime': '2024-07-10T15:51:18Z', 'severity': 'Info', 'status': 'True', 'type': 'PredictorRouteReady'}, {'lastTransitionTime': '2024-07-10T15:51:18Z', 'status': 'True', 'type': 'Ready'}], 'url': 'http://lrc.kubeflow-user-example-com.example.com'}}\n"
      ]
     }
    ],
@@ -117,22 +117,139 @@
     "namespace = utils.get_default_target_namespace()\n",
     "\n",
     "\n",
-    "isvc_status = KServe.get(\"test\", namespace=namespace)\n",
+    "isvc_status = KServe.get(\"lrc\", namespace=namespace)\n",
     "print(isvc_status)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2dc8a043-b575-445d-9fde-cfd5db847b0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model endpoint: http://lrc.kubeflow-user-example-com.svc.cluster.local/v1/models/lrc:predict\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    model_endpoint = isvc_status['status']['address']['url']\n",
     "    print(f\"Model endpoint: {model_endpoint}\")\n",
     "except KeyError:\n",
     "    print(\"Error: Unable to retrieve the model endpoint.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "22f7a722-ee68-4db0-8a6f-fd6ba31433bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apiVersion': 'serving.kserve.io/v1beta1',\n",
+       " 'kind': 'InferenceService',\n",
+       " 'metadata': {'annotations': {'sidecar.istio.io/inject': 'false'},\n",
+       "  'creationTimestamp': '2024-07-10T15:50:38Z',\n",
+       "  'deletionGracePeriodSeconds': 0,\n",
+       "  'deletionTimestamp': '2024-07-10T15:54:14Z',\n",
+       "  'finalizers': ['inferenceservice.finalizers'],\n",
+       "  'generation': 2,\n",
+       "  'managedFields': [{'apiVersion': 'serving.kserve.io/v1beta1',\n",
+       "    'fieldsType': 'FieldsV1',\n",
+       "    'fieldsV1': {'f:metadata': {'f:annotations': {'.': {},\n",
+       "       'f:sidecar.istio.io/inject': {}}},\n",
+       "     'f:spec': {'.': {},\n",
+       "      'f:predictor': {'.': {},\n",
+       "       'f:serviceAccountName': {},\n",
+       "       'f:sklearn': {'.': {}, 'f:name': {}, 'f:storageUri': {}}}}},\n",
+       "    'manager': 'OpenAPI-Generator',\n",
+       "    'operation': 'Update',\n",
+       "    'time': '2024-07-10T15:50:36Z'},\n",
+       "   {'apiVersion': 'serving.kserve.io/v1beta1',\n",
+       "    'fieldsType': 'FieldsV1',\n",
+       "    'fieldsV1': {'f:metadata': {'f:finalizers': {'.': {},\n",
+       "       'v:\"inferenceservice.finalizers\"': {}}}},\n",
+       "    'manager': 'manager',\n",
+       "    'operation': 'Update',\n",
+       "    'time': '2024-07-10T15:50:38Z'},\n",
+       "   {'apiVersion': 'serving.kserve.io/v1beta1',\n",
+       "    'fieldsType': 'FieldsV1',\n",
+       "    'fieldsV1': {'f:status': {'.': {},\n",
+       "      'f:address': {'.': {}, 'f:url': {}},\n",
+       "      'f:components': {'.': {},\n",
+       "       'f:predictor': {'.': {},\n",
+       "        'f:address': {'.': {}, 'f:url': {}},\n",
+       "        'f:latestCreatedRevision': {},\n",
+       "        'f:latestReadyRevision': {},\n",
+       "        'f:latestRolledoutRevision': {},\n",
+       "        'f:traffic': {},\n",
+       "        'f:url': {}}},\n",
+       "      'f:conditions': {},\n",
+       "      'f:url': {}}},\n",
+       "    'manager': 'manager',\n",
+       "    'operation': 'Update',\n",
+       "    'subresource': 'status',\n",
+       "    'time': '2024-07-10T15:51:18Z'}],\n",
+       "  'name': 'lrc',\n",
+       "  'namespace': 'kubeflow-user-example-com',\n",
+       "  'resourceVersion': '4970591',\n",
+       "  'uid': 'def9a850-3278-4096-8913-cb692128571d'},\n",
+       " 'spec': {'predictor': {'model': {'modelFormat': {'name': 'sklearn'},\n",
+       "    'name': '',\n",
+       "    'protocolVersion': 'v1',\n",
+       "    'resources': {},\n",
+       "    'runtime': 'kserve-sklearnserver',\n",
+       "    'storageUri': 's3://mlpipelineews/version1/lrc/model.pkl'},\n",
+       "   'serviceAccountName': 's3-service-account'}},\n",
+       " 'status': {'address': {'url': 'http://lrc.kubeflow-user-example-com.svc.cluster.local/v1/models/lrc:predict'},\n",
+       "  'components': {'predictor': {'address': {'url': 'http://lrc-predictor-default.kubeflow-user-example-com.svc.cluster.local'},\n",
+       "    'latestCreatedRevision': 'lrc-predictor-default-00001',\n",
+       "    'latestReadyRevision': 'lrc-predictor-default-00001',\n",
+       "    'latestRolledoutRevision': 'lrc-predictor-default-00001',\n",
+       "    'traffic': [{'latestRevision': True,\n",
+       "      'percent': 100,\n",
+       "      'revisionName': 'lrc-predictor-default-00001'}],\n",
+       "    'url': 'http://lrc-predictor-default.kubeflow-user-example-com.example.com'}},\n",
+       "  'conditions': [{'lastTransitionTime': '2024-07-10T15:51:18Z',\n",
+       "    'status': 'True',\n",
+       "    'type': 'IngressReady'},\n",
+       "   {'lastTransitionTime': '2024-07-10T15:51:18Z',\n",
+       "    'severity': 'Info',\n",
+       "    'status': 'True',\n",
+       "    'type': 'PredictorConfigurationReady'},\n",
+       "   {'lastTransitionTime': '2024-07-10T15:51:18Z',\n",
+       "    'status': 'True',\n",
+       "    'type': 'PredictorReady'},\n",
+       "   {'lastTransitionTime': '2024-07-10T15:51:18Z',\n",
+       "    'severity': 'Info',\n",
+       "    'status': 'True',\n",
+       "    'type': 'PredictorRouteReady'},\n",
+       "   {'lastTransitionTime': '2024-07-10T15:51:18Z',\n",
+       "    'status': 'True',\n",
+       "    'type': 'Ready'}],\n",
+       "  'url': 'http://lrc.kubeflow-user-example-com.example.com'}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = \"lrc\"\n",
+    "namespace = utils.get_default_target_namespace()\n",
+    "\n",
+    "# Initialize the KServe client\n",
+    "KServe = KServeClient()\n",
+    "\n",
+    "# Delete the inference service\n",
+    "KServe.delete(name, namespace)"
    ]
   },
   {
@@ -185,7 +302,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3.delete_object(Bucket=bucket_name, Key=original_key)\n"
+    "name = \"test\"\n",
+    "namespace = utils.get_default_target_namespace()\n",
+    "\n",
+    "# Initialize the KServe client\n",
+    "KServe = KServeClient()\n",
+    "\n",
+    "# Delete the inference service\n",
+    "KServe.delete(name, namespace)\n"
    ]
   }
  ],
