--- a/Inference/Scripts/GithubProducerBatch.ipynb
+++ b/Inference/Scripts/GithubProducerBatch.ipynb
@@ -71,6 +71,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a1506e2-c766-4e12-ac59-898fc5481bca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "from botocore.exceptions import ClientError\n",
+    "import json\n",
+    "\n",
+    "def get_secret():\n",
+    "\n",
+    "    secret_name = \"DBCreds\"\n",
+    "    region_name = \"us-east-1\"\n",
+    "\n",
+    "    # Create a Secrets Manager client\n",
+    "    session = boto3.session.Session()\n",
+    "    client = session.client(\n",
+    "        service_name='secretsmanager',\n",
+    "        region_name=region_name\n",
+    "    )\n",
+    "\n",
+    "    try:\n",
+    "        get_secret_value_response = client.get_secret_value(\n",
+    "            SecretId=secret_name\n",
+    "        )\n",
+    "    except ClientError as e:\n",
+    "        raise e\n",
+    "\n",
+    "    secret = get_secret_value_response['SecretString']\n",
+    "    \n",
+    "    # Parse the secret string to get the credentials\n",
+    "    secret_dict = json.loads(secret)\n",
+    "    username = secret_dict['username']\n",
+    "    password = secret_dict['password']\n",
+    "    host = secret_dict['host']\n",
+    "    port = secret_dict['port']\n",
+    "    dbname = secret_dict['dbname']\n",
+    "\n",
+    "    return username, password, host, port, dbname\n",
+    "\n",
+    "\n",
+    "(user,pswd,host,port,db) = get_secret()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0d2a51e8-a3f5-404e-8ffd-20b609ea3df9",
    "metadata": {},
@@ -159,7 +205,7 @@
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "# Broker address\n",
-    "brokers = [\"*:9092\"]\n",
+    "brokers = [f\"{host}:9092\"]\n",
     "\n",
     "# GitHub raw URL for the CSV file\n",
     "github_url = \"https://raw.githubusercontent.com/tsimhadri-ews/internproject/malware-detection-0/src/MalwareData.csv\"\n",
