--- a/Inference/Scripts/KserveConsumer.ipynb
+++ b/Inference/Scripts/KserveConsumer.ipynb
@@ -26,7 +26,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "id": "47c0d0d3-08a4-4810-ac60-68458abb847b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "from botocore.exceptions import ClientError\n",
+    "import json\n",
+    "\n",
+    "def get_secret():\n",
+    "\n",
+    "    secret_name = \"DBCreds\"\n",
+    "    region_name = \"us-east-1\"\n",
+    "\n",
+    "    # Create a Secrets Manager client\n",
+    "    session = boto3.session.Session()\n",
+    "    client = session.client(\n",
+    "        service_name='secretsmanager',\n",
+    "        region_name=region_name\n",
+    "    )\n",
+    "\n",
+    "    try:\n",
+    "        get_secret_value_response = client.get_secret_value(\n",
+    "            SecretId=secret_name\n",
+    "        )\n",
+    "    except ClientError as e:\n",
+    "        raise e\n",
+    "\n",
+    "    secret = get_secret_value_response['SecretString']\n",
+    "    \n",
+    "    # Parse the secret string to get the credentials\n",
+    "    secret_dict = json.loads(secret)\n",
+    "    username = secret_dict['username']\n",
+    "    password = secret_dict['password']\n",
+    "    host = secret_dict['host']\n",
+    "    port = secret_dict['port']\n",
+    "    dbname = secret_dict['dbname']\n",
+    "\n",
+    "    return username, password, host, port, dbname\n",
+    "\n",
+    "\n",
+    "(user,pswd,host,port,db) = get_secret()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "e1df2b5a-9625-4306-82c5-c6022964a50e",
    "metadata": {},
    "outputs": [
@@ -35,78 +81,36 @@
      "output_type": "stream",
      "text": [
       "INFO:__main__:Creating Kafka consumer...\n",
-      "INFO:kafka.conn:<BrokerConnection node_id=bootstrap-0 host=ec2-3-84-88-216.compute-1.amazonaws.com:9092 <connecting> [IPv4 ('3.84.88.216', 9092)]>: connecting to ec2-3-84-88-216.compute-1.amazonaws.com:9092 [('3.84.88.216', 9092) IPv4]\n",
+      "INFO:kafka.conn:<BrokerConnection node_id=bootstrap-0 host=52.200.168.233:9092 <connecting> [IPv4 ('52.200.168.233', 9092)]>: connecting to 52.200.168.233:9092 [('52.200.168.233', 9092) IPv4]\n",
       "INFO:kafka.conn:Probing node bootstrap-0 broker version\n",
-      "INFO:kafka.conn:<BrokerConnection node_id=bootstrap-0 host=ec2-3-84-88-216.compute-1.amazonaws.com:9092 <connecting> [IPv4 ('3.84.88.216', 9092)]>: Connection complete.\n",
+      "INFO:kafka.conn:<BrokerConnection node_id=bootstrap-0 host=52.200.168.233:9092 <connecting> [IPv4 ('52.200.168.233', 9092)]>: Connection complete.\n",
       "INFO:kafka.conn:Broker version identified as 2.5.0\n",
       "INFO:kafka.conn:Set configuration api_version=(2, 5, 0) to skip auto check_version requests on startup\n",
       "INFO:kafka.consumer.subscription_state:Updating subscribed topics to: ('three',)\n",
       "INFO:__main__:Subscribed to topic: three\n",
-      "INFO:kafka.cluster:Group coordinator for my-group is BrokerMetadata(nodeId='coordinator-0', host='ec2-3-84-88-216.compute-1.amazonaws.com', port=9092, rack=None)\n",
-      "INFO:kafka.coordinator:Discovered coordinator coordinator-0 for group my-group\n",
+      "INFO:kafka.cluster:Group coordinator for my-group is BrokerMetadata(nodeId='coordinator-2', host='ec2-52-200-168-233.compute-1.amazonaws.com', port=9094, rack=None)\n",
+      "INFO:kafka.coordinator:Discovered coordinator coordinator-2 for group my-group\n",
       "INFO:kafka.coordinator:Starting new heartbeat thread\n",
       "INFO:kafka.coordinator.consumer:Revoking previously assigned partitions set() for group my-group\n",
-      "INFO:kafka.conn:<BrokerConnection node_id=coordinator-0 host=ec2-3-84-88-216.compute-1.amazonaws.com:9092 <connecting> [IPv4 ('3.84.88.216', 9092)]>: connecting to ec2-3-84-88-216.compute-1.amazonaws.com:9092 [('3.84.88.216', 9092) IPv4]\n",
-      "INFO:kafka.conn:<BrokerConnection node_id=coordinator-0 host=ec2-3-84-88-216.compute-1.amazonaws.com:9092 <connecting> [IPv4 ('3.84.88.216', 9092)]>: Connection complete.\n",
-      "INFO:kafka.conn:<BrokerConnection node_id=bootstrap-0 host=ec2-3-84-88-216.compute-1.amazonaws.com:9092 <connected> [IPv4 ('3.84.88.216', 9092)]>: Closing connection. \n",
+      "INFO:kafka.conn:<BrokerConnection node_id=coordinator-2 host=ec2-52-200-168-233.compute-1.amazonaws.com:9094 <connecting> [IPv4 ('52.200.168.233', 9094)]>: connecting to ec2-52-200-168-233.compute-1.amazonaws.com:9094 [('52.200.168.233', 9094) IPv4]\n",
+      "INFO:kafka.conn:<BrokerConnection node_id=coordinator-2 host=ec2-52-200-168-233.compute-1.amazonaws.com:9094 <connecting> [IPv4 ('52.200.168.233', 9094)]>: Connection complete.\n",
+      "INFO:kafka.conn:<BrokerConnection node_id=bootstrap-0 host=52.200.168.233:9092 <connected> [IPv4 ('52.200.168.233', 9092)]>: Closing connection. \n",
       "INFO:kafka.coordinator:(Re-)joining group my-group\n",
       "INFO:kafka.coordinator:Elected group leader -- performing partition assignments using range\n",
-      "INFO:kafka.conn:<BrokerConnection node_id=2 host=ec2-3-84-88-216.compute-1.amazonaws.com:9094 <connecting> [IPv4 ('3.84.88.216', 9094)]>: connecting to ec2-3-84-88-216.compute-1.amazonaws.com:9094 [('3.84.88.216', 9094) IPv4]\n",
-      "INFO:kafka.conn:<BrokerConnection node_id=2 host=ec2-3-84-88-216.compute-1.amazonaws.com:9094 <connecting> [IPv4 ('3.84.88.216', 9094)]>: Connection complete.\n",
-      "INFO:kafka.coordinator:Successfully joined group my-group with generation 19\n",
+      "INFO:kafka.conn:<BrokerConnection node_id=2 host=ec2-52-200-168-233.compute-1.amazonaws.com:9094 <connecting> [IPv4 ('52.200.168.233', 9094)]>: connecting to ec2-52-200-168-233.compute-1.amazonaws.com:9094 [('52.200.168.233', 9094) IPv4]\n",
+      "INFO:kafka.conn:<BrokerConnection node_id=2 host=ec2-52-200-168-233.compute-1.amazonaws.com:9094 <connecting> [IPv4 ('52.200.168.233', 9094)]>: Connection complete.\n",
+      "INFO:kafka.coordinator:Successfully joined group my-group with generation 3\n",
       "INFO:kafka.consumer.subscription_state:Updated partition assignment: [TopicPartition(topic='three', partition=0)]\n",
       "INFO:kafka.coordinator.consumer:Setting newly assigned partitions {TopicPartition(topic='three', partition=0)} for group my-group\n",
-      "INFO:kafka.conn:<BrokerConnection node_id=0 host=ec2-3-84-88-216.compute-1.amazonaws.com:9092 <connecting> [IPv4 ('3.84.88.216', 9092)]>: connecting to ec2-3-84-88-216.compute-1.amazonaws.com:9092 [('3.84.88.216', 9092) IPv4]\n",
-      "INFO:kafka.conn:<BrokerConnection node_id=0 host=ec2-3-84-88-216.compute-1.amazonaws.com:9092 <connecting> [IPv4 ('3.84.88.216', 9092)]>: Connection complete.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Received message: {'SizeOfOptionalHeader': -0.36050749977742014, 'MinorLinkerVersion': -0.37628545401339736, 'SizeOfCode': 0.7319818837332536, 'SizeOfInitializedData': -0.21890447616440128, 'SizeOfUninitializedData': -0.12754141233745858, 'BaseOfCode': -0.10815786799743762, 'BaseOfData': 0.8442979845835227, 'ImageBase': -0.014265954069590235, 'SectionAlignment': -0.02785883454533931, 'MajorOperatingSystemVersion': -3.783301043371495, 'MinorImageVersion': -0.08601248526438687, 'MajorSubsystemVersion': -8.146929400017378, 'SizeOfHeaders': -0.19993743506016834, 'CheckSum': -0.30014776191072096, 'Subsystem': 18.955819550476978, 'DllCharacteristics': -1.18386423766959, 'SizeOfStackReserve': 0.36320900044581794, 'SizeOfStackCommit': -0.18911824926091036, 'SizeOfHeapReserve': 0.1275489610136435, 'NumberOfRvaAndSizes': -0.006541198444001456, 'SectionsNb': 1.685708547402764, 'SectionsMinEntropy': 0.7753814443163086, 'SectionsMaxEntropy': 0.2730052092310991, 'SectionMaxRawsize': 0.11133533433969081, 'SectionsMinVirtualsize': -0.3451565790953371, 'SectionMaxVirtualsize': 0.3088346950501273, 'ImportsNb': -1.9127812586378552, 'ImportsNbOrdinal': -0.386936283026008, 'ExportNb': -0.24618753485710412, 'ResourcesNb': -0.36406736962345426, 'ResourcesMinEntropy': 0.23496484147312388, 'ResourcesMaxEntropy': -1.0764797305299745, 'ResourcesMinSize': 0.0204044027827606, 'ResourcesMaxSize': -0.07738580403779662, 'LoadConfigurationSize': -0.027152620679605298, 'VersionInformationSize': 0.5424616990217888, 'uid': '0181a56a-8c80-42e3-9a16-8ab4cd4bc690'}\n",
-      "KServe response: {'predictions': [1]}\n",
-      "['0181a56a-8c80-42e3-9a16-8ab4cd4bc690', 1]\n",
-      "Connected to PostgreSQL successfully.\n",
-      "Data inserted successfully.\n",
-      "PostgreSQL connection closed.\n",
-      "Received message: {'SizeOfOptionalHeader': -0.36050749977742014, 'MinorLinkerVersion': -0.37628545401339736, 'SizeOfCode': 0.052683490002428626, 'SizeOfInitializedData': -0.6177297309336889, 'SizeOfUninitializedData': -0.12754141233745858, 'BaseOfCode': -0.10815786799743762, 'BaseOfData': 0.1775706814624997, 'ImageBase': -0.013153424929036806, 'SectionAlignment': -0.02785883454533931, 'MajorOperatingSystemVersion': 0.09219227940541337, 'MinorImageVersion': -0.08601248526438687, 'MajorSubsystemVersion': 0.24455526923166146, 'SizeOfHeaders': -0.19993743506016834, 'CheckSum': -0.3209139664552414, 'Subsystem': -0.36222252198195687, 'DllCharacteristics': 0.6972222920691269, 'SizeOfStackReserve': 0.36320900044581794, 'SizeOfStackCommit': -0.18911824926091036, 'SizeOfHeapReserve': 0.1275489610136435, 'NumberOfRvaAndSizes': -0.006541198444001456, 'SectionsNb': -0.550431356824648, 'SectionsMinEntropy': 0.3558774663102176, 'SectionsMaxEntropy': -0.3164581452393003, 'SectionMaxRawsize': -0.2184957432833888, 'SectionsMinVirtualsize': -0.24182651616064144, 'SectionMaxVirtualsize': -0.37863484888255466, 'ImportsNb': 0.816199121464104, 'ImportsNbOrdinal': -0.386936283026008, 'ExportNb': -0.24618753485710412, 'ResourcesNb': -0.5363174107628034, 'ResourcesMinEntropy': 0.9079938671062746, 'ResourcesMaxEntropy': -0.15138879113755602, 'ResourcesMinSize': 0.08043671754100909, 'ResourcesMaxSize': -0.29238465542570763, 'LoadConfigurationSize': -0.014713683921922245, 'VersionInformationSize': 0.689508828920145, 'uid': 'e8567e15-513d-4e8e-a975-42dba1eed214'}\n",
-      "KServe response: {'predictions': [1]}\n",
-      "['e8567e15-513d-4e8e-a975-42dba1eed214', 1]\n",
-      "Connected to PostgreSQL successfully.\n",
-      "Data inserted successfully.\n",
-      "PostgreSQL connection closed.\n",
-      "Received message: {'SizeOfOptionalHeader': -0.36050749977742014, 'MinorLinkerVersion': -0.37628545401339736, 'SizeOfCode': 1.063997476229658, 'SizeOfInitializedData': 0.6800649771322324, 'SizeOfUninitializedData': -0.12754141233745858, 'BaseOfCode': -0.10815786799743762, 'BaseOfData': 1.6782066975173455, 'ImageBase': -0.013153424929036806, 'SectionAlignment': -0.02785883454533931, 'MajorOperatingSystemVersion': 0.09219227940541337, 'MinorImageVersion': -0.08601248526438687, 'MajorSubsystemVersion': 0.24455526923166146, 'SizeOfHeaders': -0.19993743506016834, 'CheckSum': -0.2700810278037317, 'Subsystem': -0.36222252198195687, 'DllCharacteristics': 0.6883747788200754, 'SizeOfStackReserve': 0.36320900044581794, 'SizeOfStackCommit': -0.18911824926091036, 'SizeOfHeapReserve': 0.1275489610136435, 'NumberOfRvaAndSizes': -0.006541198444001456, 'SectionsNb': -0.550431356824648, 'SectionsMinEntropy': 1.1390115636410802, 'SectionsMaxEntropy': 0.6031247743400341, 'SectionMaxRawsize': 0.34650323674601974, 'SectionsMinVirtualsize': 0.5839191499484678, 'SectionMaxVirtualsize': 0.26562337839772926, 'ImportsNb': 1.1967509315963867, 'ImportsNbOrdinal': 1.9721422905407866, 'ExportNb': -0.034528021589986024, 'ResourcesNb': 0.023085114176877836, 'ResourcesMinEntropy': 0.46510668058447896, 'ResourcesMaxEntropy': -0.0469256332553571, 'ResourcesMinSize': -0.013093084102890735, 'ResourcesMaxSize': 0.7495086431239923, 'LoadConfigurationSize': -0.014713683921922245, 'VersionInformationSize': 0.689508828920145, 'uid': '6cb7751b-f34c-4f92-aea4-82ebcfc1bc8c'}\n",
-      "KServe response: {'predictions': [1]}\n",
-      "['6cb7751b-f34c-4f92-aea4-82ebcfc1bc8c', 1]\n",
-      "Connected to PostgreSQL successfully.\n",
-      "Data inserted successfully.\n",
-      "PostgreSQL connection closed.\n",
-      "Received message: {'SizeOfOptionalHeader': -0.36050749977742014, 'MinorLinkerVersion': -0.37628545401339736, 'SizeOfCode': 1.1946394287286264, 'SizeOfInitializedData': 0.3174195309376477, 'SizeOfUninitializedData': -0.12754141233745858, 'BaseOfCode': -0.10815786799743762, 'BaseOfData': 1.6585162482478013, 'ImageBase': -0.013153424929036806, 'SectionAlignment': -0.02785883454533931, 'MajorOperatingSystemVersion': 0.09219227940541337, 'MinorImageVersion': -0.08601248526438687, 'MajorSubsystemVersion': 0.24455526923166146, 'SizeOfHeaders': -0.19993743506016834, 'CheckSum': -0.2815977717231001, 'Subsystem': -0.36222252198195687, 'DllCharacteristics': 0.6972222920691269, 'SizeOfStackReserve': 0.36320900044581794, 'SizeOfStackCommit': -0.18911824926091036, 'SizeOfHeapReserve': 0.1275489610136435, 'NumberOfRvaAndSizes': -0.006541198444001456, 'SectionsNb': -0.550431356824648, 'SectionsMinEntropy': 1.3321707554081132, 'SectionsMaxEntropy': 0.5979520230856373, 'SectionMaxRawsize': 0.4194900350264726, 'SectionsMinVirtualsize': 0.3993088156772878, 'SectionMaxVirtualsize': 0.34899052858195756, 'ImportsNb': 1.9359038216820297, 'ImportsNbOrdinal': 0.8740442556548962, 'ExportNb': -0.034528021589986024, 'ResourcesNb': -0.02230053802797562, 'ResourcesMinEntropy': 0.31962989502990014, 'ResourcesMaxEntropy': 0.5332569626111019, 'ResourcesMinSize': -0.01838851592903624, 'ResourcesMaxSize': -0.22528158791419856, 'LoadConfigurationSize': -0.014713683921922245, 'VersionInformationSize': 0.689508828920145, 'uid': 'e77848bf-3d80-4e5b-9e37-e35d25161583'}\n",
-      "KServe response: {'predictions': [1]}\n",
-      "['e77848bf-3d80-4e5b-9e37-e35d25161583', 1]\n",
-      "Connected to PostgreSQL successfully.\n",
-      "Data inserted successfully.\n",
-      "PostgreSQL connection closed.\n",
-      "Received message: {'SizeOfOptionalHeader': -0.36050749977742014, 'MinorLinkerVersion': -0.37628545401339736, 'SizeOfCode': 0.5663604786351091, 'SizeOfInitializedData': 0.09622233564283873, 'SizeOfUninitializedData': -0.12754141233745858, 'BaseOfCode': -0.10815786799743762, 'BaseOfData': 1.1950460254310342, 'ImageBase': -0.013153424929036806, 'SectionAlignment': -0.02785883454533931, 'MajorOperatingSystemVersion': 0.09219227940541337, 'MinorImageVersion': -0.08601248526438687, 'MajorSubsystemVersion': 0.24455526923166146, 'SizeOfHeaders': -0.19993743506016834, 'CheckSum': -0.2950782487567185, 'Subsystem': -0.36222252198195687, 'DllCharacteristics': 0.6972222920691269, 'SizeOfStackReserve': 0.36320900044581794, 'SizeOfStackCommit': -0.18911824926091036, 'SizeOfHeapReserve': 0.1275489610136435, 'NumberOfRvaAndSizes': -0.006541198444001456, 'SectionsNb': -0.550431356824648, 'SectionsMinEntropy': 0.9458261776814767, 'SectionsMaxEntropy': 0.6094272837460144, 'SectionMaxRawsize': 0.06848434261926203, 'SectionsMinVirtualsize': -0.19980594897741555, 'SectionMaxVirtualsize': -0.05100305013841528, 'ImportsNb': 0.9125019663044368, 'ImportsNbOrdinal': 0.6426500154233525, 'ExportNb': -0.034528021589986024, 'ResourcesNb': -0.5363174107628034, 'ResourcesMinEntropy': 0.9086230985212523, 'ResourcesMaxEntropy': -0.09095849437701217, 'ResourcesMinSize': 0.1279253712517139, 'ResourcesMaxSize': -0.2879778104404768, 'LoadConfigurationSize': -0.014713683921922245, 'VersionInformationSize': 0.689508828920145, 'uid': 'd5f2a6c6-7c85-47cc-9ff0-2dafd2bf4090'}\n",
-      "KServe response: {'predictions': [1]}\n",
-      "['d5f2a6c6-7c85-47cc-9ff0-2dafd2bf4090', 1]\n",
-      "Connected to PostgreSQL successfully.\n",
-      "Data inserted successfully.\n",
-      "PostgreSQL connection closed.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "INFO:kafka.conn:<BrokerConnection node_id=0 host=ec2-52-200-168-233.compute-1.amazonaws.com:9092 <connecting> [IPv4 ('52.200.168.233', 9092)]>: connecting to ec2-52-200-168-233.compute-1.amazonaws.com:9092 [('52.200.168.233', 9092) IPv4]\n",
+      "INFO:kafka.conn:<BrokerConnection node_id=0 host=ec2-52-200-168-233.compute-1.amazonaws.com:9092 <connecting> [IPv4 ('52.200.168.233', 9092)]>: Connection complete.\n",
       "INFO:__main__:Consumer stopped manually.\n",
       "INFO:kafka.coordinator:Stopping heartbeat thread\n",
       "INFO:kafka.coordinator:Leaving consumer group (my-group).\n",
-      "INFO:kafka.conn:<BrokerConnection node_id=coordinator-0 host=ec2-3-84-88-216.compute-1.amazonaws.com:9092 <connected> [IPv4 ('3.84.88.216', 9092)]>: Closing connection. \n",
-      "INFO:kafka.conn:<BrokerConnection node_id=2 host=ec2-3-84-88-216.compute-1.amazonaws.com:9094 <connected> [IPv4 ('3.84.88.216', 9094)]>: Closing connection. \n",
-      "INFO:kafka.conn:<BrokerConnection node_id=0 host=ec2-3-84-88-216.compute-1.amazonaws.com:9092 <connected> [IPv4 ('3.84.88.216', 9092)]>: Closing connection. \n",
-      "ERROR:kafka.consumer.fetcher:Fetch to node 0 failed: Cancelled: <BrokerConnection node_id=0 host=ec2-3-84-88-216.compute-1.amazonaws.com:9092 <connected> [IPv4 ('3.84.88.216', 9092)]>\n",
+      "INFO:kafka.conn:<BrokerConnection node_id=coordinator-2 host=ec2-52-200-168-233.compute-1.amazonaws.com:9094 <connected> [IPv4 ('52.200.168.233', 9094)]>: Closing connection. \n",
+      "INFO:kafka.conn:<BrokerConnection node_id=2 host=ec2-52-200-168-233.compute-1.amazonaws.com:9094 <connected> [IPv4 ('52.200.168.233', 9094)]>: Closing connection. \n",
+      "INFO:kafka.conn:<BrokerConnection node_id=0 host=ec2-52-200-168-233.compute-1.amazonaws.com:9092 <connected> [IPv4 ('52.200.168.233', 9092)]>: Closing connection. \n",
+      "ERROR:kafka.consumer.fetcher:Fetch to node 0 failed: Cancelled: <BrokerConnection node_id=0 host=ec2-52-200-168-233.compute-1.amazonaws.com:9092 <connected> [IPv4 ('52.200.168.233', 9092)]>\n",
       "INFO:__main__:Consumer closed.\n"
      ]
     }
@@ -126,7 +130,7 @@
     "resp = []\n",
     "\n",
     "# Replace with your Kafka broker address(es)\n",
-    "brokers = [\"*:9092\"]\n",
+    "brokers = [f\"{host}:9092\"]\n",
     "\n",
     "# Replace with your topic name\n",
     "topic = \"three\"\n",
@@ -155,11 +159,11 @@
     "\n",
     "def outcome_to_database(values):\n",
     "    db_details = {\n",
-    "        'dbname': '*',\n",
-    "        'user': '*',\n",
-    "        'password': '*',\n",
-    "        'host': '*',\n",
-    "        'port': 5432\n",
+    "        'dbname': db,\n",
+    "        'user': user,\n",
+    "        'password': pswd,\n",
+    "        'host': host,\n",
+    "        'port': port\n",
     "    }\n",
     "    # Data to insert\n",
     "    outcome_data = {\n",
