small changes and HITL

--- a/Inference/Scripts/IDKserveConsumer (2).ipynb
+++ b/Inference/Scripts/IDKserveConsumer (2).ipynb
@@ -239,7 +239,7 @@
     "        'uid': values[0],  # Generating a unique ID\n",
     "        'outcome': values[1]  # This can be 0 or 1\n",
     "    }\n",
-    "\n",
+    "    \n",
     "# Connect to PostgreSQL\n",
     "    try:\n",
     "        conn = psycopg2.connect(**db_details)\n",
@@ -263,7 +263,7 @@
     "    SET outcome = %s\n",
     "    WHERE uid = %s\n",
     "    \"\"\"\n",
-    "    cursor.execute(update_query, (outcome_data['outcome'], outcome_data['uid']))\n",
+    "    #cursor.execute(update_query, (outcome_data['outcome'], outcome_data['uid']))\n",
     "    conn.commit()\n",
     "        #     break\n",
     "        #     print(\"Data inserted and updated successfully.\")\n",
