--- a/Inference/Scripts/MDKserveConsumer.ipynb
+++ b/Inference/Scripts/MDKserveConsumer.ipynb
@@ -328,7 +328,7 @@
     "    SET outcome = %s\n",
     "    WHERE uid = %s\n",
     "    \"\"\"\n",
-    "    cursor.execute(update_query, (outcome_data['outcome'], outcome_data['uid']))\n",
+    "    #cursor.execute(update_query, (outcome_data['outcome'], outcome_data['uid']))\n",
     "    conn.commit()\n",
     "    print(\"Data inserted and updated successfully.\")\n",
     "    # break\n",
