--- a/Pipeline/Intrusion/Production/IDProductionPipeline.ipynb
+++ b/Pipeline/Intrusion/Production/IDProductionPipeline.ipynb
@@ -149,7 +149,7 @@
     "\n",
     "    try:\n",
     "        with engine.connect() as conn:\n",
-    "            query = text('SELECT count(*) FROM intrusion_outcomes;')\n",
+    "            query = text('select count(*) from intrusion_data as id join intrusion_outcomes as io on io.uid = id.uid where id.outcome!=2;')\n",
     "            data = pd.read_sql_query(query, conn)\n",
     "            count = data.iloc[0]['count']\n",
     "    except Exception as e:\n",
@@ -162,8 +162,26 @@
     "            meta_count = data.iloc[0]['count']\n",
     "    except Exception as e:\n",
     "        print(\"error\")\n",
+    "        \n",
+    "    try:\n",
+    "        with engine.connect() as conn:\n",
+    "            query = text('select count(*) from intrusion_data as id join intrusion_outcomes as io on io.uid = id.uid where io.outcome!=id.outcome;')\n",
+    "            data = pd.read_sql_query(query, conn)\n",
+    "            amount_incorrect = data.iloc[0]['count']\n",
+    "    except Exception as e:\n",
+    "        print(\"error\")\n",
+    "        \n",
+    "    pct = amount_incorrect/count\n",
+    "    if count >= 10 or amount_incorrect >2:\n",
+    "        try:\n",
+    "            with engine.connect() as conn:\n",
+    "                delete_query = text(\"DELETE FROM intrusion_outcomes io USING intrusion_data id WHERE io.uid = id.uid;\")\n",
+    "                result = conn.execute(delete_query)\n",
+    "                conn.commit()\n",
+    "        except Exception as e:\n",
+    "            print(\"error\")\n",
     "\n",
-    "    if (count % 5 == 0 and count != 0) or meta_count == 0:\n",
+    "    if (count >= 10 and count != 0) or meta_count == 0 or amount_incorrect > 2:\n",
     "        return True\n",
     "    else:\n",
     "        return False"
@@ -364,79 +382,6 @@
     "    mean_df = pd.DataFrame([preprocess_df])\n",
     "    meta_df = pd.DataFrame(data = [[version, datetime.datetime.now(), len(X.columns), json.dumps(df.dtypes.astype(str).to_dict()),mean_df.iloc[0].to_json()]], columns = ['version', 'date', 'features', 'types','factor'])\n",
     "    meta_df.to_sql(\"metadata_table_intrusion\", engine, if_exists='append', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "3b33b2c1-7907-477f-a800-3026de9fa4cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hot                            float64\n",
-      "flag                            object\n",
-      "land                           float64\n",
-      "count                           object\n",
-      "urgent                         float64\n",
-      "service                         object\n",
-      "duration                       float64\n",
-      "num_root                       float64\n",
-      "dst_bytes                       object\n",
-      "logged_in                       object\n",
-      "src_bytes                       object\n",
-      "srv_count                       object\n",
-      "num_shells                     float64\n",
-      "root_shell                     float64\n",
-      "rerror_rate                    float64\n",
-      "serror_rate                    float64\n",
-      "su_attempted                   float64\n",
-      "diff_srv_rate                  float64\n",
-      "is_host_login                  float64\n",
-      "protocol_type                   object\n",
-      "same_srv_rate                  float64\n",
-      "dst_host_count                  object\n",
-      "is_guest_login                 float64\n",
-      "wrong_fragment                 float64\n",
-      "num_compromised                float64\n",
-      "srv_rerror_rate                float64\n",
-      "srv_serror_rate                float64\n",
-      "num_access_files               float64\n",
-      "num_failed_logins              float64\n",
-      "num_outbound_cmds              float64\n",
-      "dst_host_srv_count              object\n",
-      "num_file_creations             float64\n",
-      "srv_diff_host_rate              object\n",
-      "dst_host_rerror_rate           float64\n",
-      "dst_host_serror_rate           float64\n",
-      "dst_host_diff_srv_rate          object\n",
-      "dst_host_same_srv_rate          object\n",
-      "dst_host_srv_rerror_rate       float64\n",
-      "dst_host_srv_serror_rate       float64\n",
-      "dst_host_same_src_port_rate     object\n",
-      "dst_host_srv_diff_host_rate     object\n",
-      "outcome                          int64\n",
-      "dtype: object\n",
-      "Index(['hot', 'flag', 'land', 'count', 'urgent', 'service', 'duration',\n",
-      "       'num_root', 'dst_bytes', 'logged_in', 'src_bytes', 'srv_count',\n",
-      "       'num_shells', 'root_shell', 'rerror_rate', 'serror_rate',\n",
-      "       'su_attempted', 'diff_srv_rate', 'protocol_type', 'same_srv_rate',\n",
-      "       'dst_host_count', 'is_guest_login', 'wrong_fragment', 'num_compromised',\n",
-      "       'srv_rerror_rate', 'srv_serror_rate', 'num_access_files',\n",
-      "       'num_failed_logins', 'dst_host_srv_count', 'num_file_creations',\n",
-      "       'srv_diff_host_rate', 'dst_host_rerror_rate', 'dst_host_serror_rate',\n",
-      "       'dst_host_diff_srv_rate', 'dst_host_same_srv_rate',\n",
-      "       'dst_host_srv_rerror_rate', 'dst_host_srv_serror_rate',\n",
-      "       'dst_host_same_src_port_rate', 'dst_host_srv_diff_host_rate',\n",
-      "       'outcome'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
-    "read_file()"
    ]
   },
   {
@@ -773,43 +718,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d607d1b4-6c68-4027-a69f-99ebf5c8892b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to PostgreSQL successfully.\n",
-      "version2/X_train.npy\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Folder './tmp/intrusion/models' already exists.\n",
-      "Connected to PostgreSQL successfully.\n",
-      "Data inserted successfully.\n",
-      "PostgreSQL connection closed.\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_op()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "b67e1108-cdba-4ec5-b6b3-c77a277bd324",
    "metadata": {},
@@ -891,126 +799,97 @@
     "        print(f\"Failed to connect to PostgreSQL: {e}\")\n",
     "        exit()\n",
     "        \n",
-    "    # Query to fetch data from the table\n",
+    "        \n",
     "    try:\n",
     "        fetch_query = \"SELECT * FROM intrusion_model_metrics ORDER BY created_at desc LIMIT 1;\"\n",
     "        df = pd.read_sql(fetch_query, conn)\n",
     "    except Exception as e:\n",
     "        print(f\"Failed to fetch data: {e}\")\n",
-    "    \n",
-    "    #print(f\"df = {df['version'][0]}\")\n",
-    "    \n",
+    "        \n",
     "    if(not df.empty):\n",
     "        version = df['version'][0]\n",
     "    else:\n",
     "        version = 1\n",
-    "        \n",
-    "    #print(f\"version = {version}\")\n",
     "    \n",
     "    try:\n",
     "        fetch_query = f\"SELECT * FROM intrusion_model_metrics where version={version} order by accuracy desc limit 1;\"\n",
     "        model = pd.read_sql(fetch_query, conn)\n",
+    "        accuracy = model['accuracy'][0]\n",
     "    except Exception as e:\n",
     "        print(f\"Failed to fetch data: {e}\")\n",
-    "    \n",
-    "    \n",
-    "    name = f\"{model['name'][0]}-version{version}-id\"\n",
-    "    print(name)\n",
-    "    namespace = utils.get_default_target_namespace()\n",
-    "    kserve_version='v1beta1'\n",
-    "    api_version = constants.KSERVE_GROUP + '/' + kserve_version\n",
-    "    \n",
-    "    isvc2 = V1beta1InferenceService(\n",
-    "        api_version=api_version,\n",
-    "        kind=constants.KSERVE_KIND,\n",
-    "        metadata=client.V1ObjectMeta(\n",
-    "            name=name,\n",
-    "            namespace=namespace,\n",
-    "            annotations={'sidecar.istio.io/inject': 'false'}\n",
-    "        ),\n",
-    "        spec=V1beta1InferenceServiceSpec(\n",
-    "            predictor=V1beta1PredictorSpec(\n",
-    "                service_account_name=\"s3-service-account\",\n",
-    "                sklearn=V1beta1SKLearnSpec(\n",
-    "                    storage_uri=model['uri'][0]\n",
-    "                )\n",
-    "            )\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    \n",
-    "    KServe = KServeClient()\n",
-    "    KServe.create(isvc2)\n",
-    "    \n",
+    "        \n",
     "    try:\n",
     "        fetch_query = \"SELECT * FROM intrusion_model_metrics where in_use is true LIMIT 1;\"\n",
     "        old_model = pd.read_sql(fetch_query, conn)\n",
     "    except Exception as e:\n",
-    "        print(f\"Failed to fetch data: {e}\")\n",
-    "    \n",
-    "    update_query_new = \"\"\"\n",
-    "        UPDATE intrusion_model_metrics\n",
-    "        SET in_use = true\n",
-    "        WHERE name = %s and version = %s;\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    update_query_old = \"\"\"\n",
-    "        UPDATE intrusion_model_metrics\n",
-    "        SET in_use = false\n",
-    "        WHERE name = %s and version = %s;\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        cursor.execute(update_query_new, (model['name'][0], int(model['version'][0])))\n",
-    "        if(not old_model.empty):\n",
-    "            cursor.execute(update_query_old, (old_model['name'][0], int(old_model['version'][0])))\n",
-    "        conn.commit()\n",
-    "    except Exception as e:\n",
-    "        print(f\"Failed to fetch data: {e}\")\n",
-    "    \n",
-    "    if(not old_model.empty):\n",
-    "        del_name = f\"{old_model['name'][0]}-version{old_model['version'][0]}-id\"\n",
+    "        print(f\"Failed to fetch data: {e}\")   \n",
+    "        \n",
+    "    if accuracy >= .85:    \n",
+    "\n",
+    "        name = f\"{model['name'][0]}-version{version}-id\"\n",
+    "        print(name)\n",
     "        namespace = utils.get_default_target_namespace()\n",
+    "        kserve_version='v1beta1'\n",
+    "        api_version = constants.KSERVE_GROUP + '/' + kserve_version\n",
     "\n",
-    "        # Initialize the KServe client\n",
+    "        isvc2 = V1beta1InferenceService(\n",
+    "            api_version=api_version,\n",
+    "            kind=constants.KSERVE_KIND,\n",
+    "            metadata=client.V1ObjectMeta(\n",
+    "                name=name,\n",
+    "                namespace=namespace,\n",
+    "                annotations={'sidecar.istio.io/inject': 'false'}\n",
+    "            ),\n",
+    "            spec=V1beta1InferenceServiceSpec(\n",
+    "                predictor=V1beta1PredictorSpec(\n",
+    "                    service_account_name=\"s3-service-account\",\n",
+    "                    sklearn=V1beta1SKLearnSpec(\n",
+    "                        storage_uri=model['uri'][0]\n",
+    "                    )\n",
+    "                )\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "\n",
     "        KServe = KServeClient()\n",
+    "        KServe.create(isvc2)\n",
     "\n",
-    "        # Delete the inference service\n",
-    "        KServe.delete(del_name, namespace)\n",
+    "\n",
+    "\n",
+    "        update_query_new = \"\"\"\n",
+    "            UPDATE intrusion_model_metrics\n",
+    "            SET in_use = true\n",
+    "            WHERE name = %s and version = %s;\n",
+    "        \"\"\"\n",
+    "\n",
+    "        update_query_old = \"\"\"\n",
+    "            UPDATE intrusion_model_metrics\n",
+    "            SET in_use = false\n",
+    "            WHERE name = %s and version = %s;\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            cursor.execute(update_query_new, (model['name'][0], int(model['version'][0])))\n",
+    "            if(not old_model.empty):\n",
+    "                cursor.execute(update_query_old, (old_model['name'][0], int(old_model['version'][0])))\n",
+    "            conn.commit()\n",
+    "        except Exception as e:\n",
+    "            print(f\"Failed to fetch data: {e}\")\n",
+    "\n",
+    "        if(not old_model.empty):\n",
+    "            del_name = f\"{old_model['name'][0]}-version{old_model['version'][0]}-id\"\n",
+    "            namespace = utils.get_default_target_namespace()\n",
+    "\n",
+    "            # Initialize the KServe client\n",
+    "            KServe = KServeClient()\n",
+    "\n",
+    "            # Delete the inference service\n",
+    "            KServe.delete(del_name, namespace)\n",
     "    \n",
+    "    else:\n",
+    "        print(\"Bad Accuracy: Email Dovelopers!\")\n",
     "    \n",
     "    cursor.close()\n",
     "    conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "8290b526-ebc3-4393-8ab8-1eb88a81422c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to PostgreSQL successfully.\n",
-      "rfc-version2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
-      "  warnings.warn(\n",
-      "/usr/local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
-      "  warnings.warn(\n",
-      "/usr/local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_eval_deploy()"
    ]
   },
   {
