cyber added with small producer change

--- a/Inference/Scripts/Intrusion/IDProducer.ipynb
+++ b/Inference/Scripts/Intrusion/IDProducer.ipynb
@@ -336,10 +336,7 @@
     "    df.loc[df['outcome'] == \"normal.\", 'outcome']  =0\n",
     "    \n",
     "    unprocess_df = df\n",
-    "    raw_df = df\n",
     "    df = preprocess(df)\n",
-    "    raw_df = raw_df[df.columns]\n",
-    "    raw_df = raw_df.drop(columns=['outcome'])\n",
     "    df = df.drop(columns=['outcome'])\n",
     "    logger.info(\"CSV file processed successfully.\")\n",
     "else:\n",
@@ -348,6 +345,7 @@
     "\n",
     "df['uid'] = [str(uuid.uuid4()) for _ in range(len(df))]\n",
     "unprocess_df['uid'] = df['uid']\n",
+    "\n",
     "# Create Kafka producers\n",
     "logger.info(\"Creating Kafka producers...\")\n",
     "postgres_producer = KafkaProducer(\n",
@@ -360,8 +358,22 @@
     "    value_serializer=lambda message: json.dumps(message).encode('utf-8'),\n",
     ")\n",
     "\n",
+    "try:\n",
+    "    with engine.connect() as conn: \n",
+    "        query = text(\"SELECT * FROM metadata_table_intrusion ORDER BY date DESC LIMIT 1;\")\n",
+    "        order = pd.read_sql_query(query, conn)\n",
+    "        order = order['factor'][0]\n",
+    "        order.pop('version')\n",
+    "        order = {key: value for key, value in order.items() if value is not None}\n",
+    "        new_order = list(order.keys())\n",
+    "        #print(new_order)\n",
+    "except Exception as e:\n",
+    "    print(f\"Failed to fetch data: {e}\")\n",
+    "new_order.append('uid')\n",
+    "df = df[new_order]\n",
+    "\n",
     "# Send data to KServe and PostgreSQL\n",
-    "first_5_rows = df.head(5)\n",
+    "first_5_rows = df.head(10)\n",
     "for index, row in first_5_rows.iterrows():\n",
     "    data = row.to_dict()\n",
     "    # Send to KServe topic\n",
@@ -372,7 +384,7 @@
     "kserve_producer.close()\n",
     "# Flush data and close the producers\n",
     "unprocess_df.columns = unprocess_df.columns.str.lower()\n",
-    "first_5_unprocess = unprocess_df.head(5)\n",
+    "first_5_unprocess = unprocess_df.head(10)\n",
     "for index, row in first_5_unprocess.iterrows():\n",
     "    data = row.to_dict()\n",
     "    # Send to PostgreSQL topic\n",
