run cyber pipeline

--- a/Pipeline/Cyber/Production/cyber-production.ipynb
+++ b/Pipeline/Cyber/Production/cyber-production.ipynb
@@ -775,6 +775,47 @@
     "    cursor.close()\n",
     "    conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import kfp\n",
+    "from kfp import dsl\n",
+    "from kfp import components\n",
+    "\n",
+    "check_condition_op = components.func_to_container_op(func=check_condition, base_image='python:3.7', packages_to_install=['pandas==1.1.5', 'sqlalchemy==1.4.45', 'boto3', 'psycopg2-binary'])\n",
+    "\n",
+    "read_csv_op = components.func_to_container_op(func=read_file, output_component_file='preprocess.yaml', base_image='python:3.7', packages_to_install=['pandas==1.1.5','scikit-learn==1.0.1', 'kfp', 'numpy', 'minio', 'psycopg2-binary', 'sqlalchemy==1.4.45','boto3'])\n",
+    "\n",
+    "train_op = components.func_to_container_op(func=train_op, output_component_file='train.yaml', base_image='python:3.7', packages_to_install=['pandas', 'scikit-learn==1.0.1','numpy','minio', 'tensorflow', 'psycopg2-binary', 'sqlalchemy','boto3'])\n",
+    "\n",
+    "eval_deploy = components.func_to_container_op(func=model_eval_deploy, output_component_file='eval_deploy.yaml', base_image='python:3.7', packages_to_install=['pandas', 'scikit-learn==1.0.1','numpy','minio', 'tensorflow', 'psycopg2-binary', 'sqlalchemy','boto3','kubernetes','kserve'])\n",
+    "\n",
+    "read_data_op = kfp.components.load_component_from_file('preprocess.yaml')\n",
+    "train_op = kfp.components.load_component_from_file('train.yaml')\n",
+    "eval_deploy_op = kfp.components.load_component_from_file('eval_deploy.yaml')\n",
+    "# @dsl.pipeline(\n",
+    "#     name='Machine Learning Pipeline',\n",
+    "#     description='A pipeline to preprocess, train, and predict using sklearn and tensorflow'\n",
+    "# )\n",
+    "\n",
+    "def ml_pipeline():\n",
+    "    check_condition = check_condition_op()\n",
+    "    check_condition.execution_options.caching_strategy.max_cache_staleness = \"P0D\"\n",
+    "    with dsl.Condition(check_condition.output == 'True'):\n",
+    "        preprocess = read_csv_op()\n",
+    "        preprocess.execution_options.caching_strategy.max_cache_staleness = \"P0D\"\n",
+    "        train = train_op().after(preprocess)\n",
+    "        train.execution_options.caching_strategy.max_cache_staleness = \"P0D\"\n",
+    "        eval_deploy = eval_deploy_op().after(train)\n",
+    "        eval_deploy.execution_options.caching_strategy.max_cache_staleness = \"P0D\"\n",
+    "\n",
+    "# Compile the pipeline\n",
+    "kfp.compiler.Compiler().compile(ml_pipeline, 'cyber_pipeline.yaml')"
+   ]
   }
  ],
  "metadata": {
