changes to IDproducer-unseen

--- a/Inference/Scripts/Intrusion/Jupyter/IDProducer-unseen.ipynb
+++ b/Inference/Scripts/Intrusion/Jupyter/IDProducer-unseen.ipynb
@@ -527,6 +527,9 @@
    ],
    "source": [
     "# Initialize logger\n",
+    "from io import BytesIO\n",
+    "from zipfile import ZipFile\n",
+    "\n",
     "logger = logging.getLogger()\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
@@ -534,7 +537,7 @@
     "brokers = [f'{host}:9092']\n",
     "\n",
     "# GitHub raw URL for the CSV file\n",
-    "github_url = \"kddcup.data.corrected.csv\"\n",
+    "github_url = \"https://github.com/tsimhadri-ews/internproject/raw/main/Data/kddcup.data.corrected.zip\"\n",
     "\n",
     "# PostgreSQL database connection details\n",
     "db_config = {\n",
@@ -597,11 +600,31 @@
     "    bootstrap_servers=brokers,\n",
     "    value_serializer=lambda message: json.dumps(message).encode('utf-8'),\n",
     ")\n",
+    "try:\n",
+    "    with engine.connect() as conn: \n",
+    "        query = text(\"SELECT * FROM metadata_table_intrusion ORDER BY date DESC LIMIT 1;\")\n",
+    "        order = pd.read_sql_query(query, conn)\n",
+    "        order = order['factor'][0]\n",
+    "        order.pop('version')\n",
+    "        order = {key: value for key, value in order.items() if value is not None}\n",
+    "        new_order = list(order.keys())\n",
+    "        #print(new_order)\n",
+    "except Exception as e:\n",
+    "    print(f\"Failed to fetch data: {e}\")\n",
+    "    \n",
+    "new_order.append('uid')\n",
+    "\n",
     "cols = column_names()\n",
     "# Send data to KServe and PostgreSQL\n",
     "df = pd.DataFrame()\n",
     "unprocess_df = pd.DataFrame()\n",
-    "chunks = pd.read_csv(github_url, names=cols, chunksize=1)\n",
+    "\n",
+    "response = requests.get(github_url)\n",
+    "zipfile = ZipFile(BytesIO(response.content))\n",
+    "\n",
+    "csv_filename = zipfile.namelist()[0]\n",
+    "\n",
+    "chunks = pd.read_csv(zipfile.open(csv_filename), names=cols, chunksize=1)\n",
     "count = 0\n",
     "#res = []\n",
     "for chunk in chunks:\n",
@@ -613,16 +636,18 @@
     "    data['uid'] = [str(uuid.uuid4())]\n",
     "    unprocess_df.loc[count,'uid'] = data.loc[count,'uid']\n",
     "    data = data.drop(columns=['outcome'])\n",
-    "    \n",
+    "    data = data[new_order]\n",
     "    df = pd.concat([df, data], ignore_index=True)\n",
     "    row = data.iloc[0].to_dict()\n",
     "    kserve_producer.send(kserve_topic, row)\n",
     "    logger.info(f\"Sent row {count + 1} to KServe Kafka topic\")\n",
     "    \n",
-    "    postgres_producer.send(postgres_topic, row)\n",
+    "    postgres_producer.send(postgres_topic, unprocess_df.iloc[count].to_dict())\n",
     "    logger.info(f\"Sent row {count + 1} to PostgreSQL Kafka topic\")\n",
     "    count += 1\n",
-    "#print(df)\n",
+    "    if count > 10:\n",
+    "        break\n",
+    "# print(unprocess_df)\n",
     "# for index, row in first_5_rows.iterrows():\n",
     "#     data = row.to_dict()\n",
     "#     # Send to KServe topic\n",
@@ -638,7 +663,7 @@
     "#     # Send to PostgreSQL topic\n",
     "#     postgres_producer.send(postgres_topic, data)\n",
     "#     logger.info(f\"Sent row {index + 1} to PostgreSQL Kafka topic\")\n",
-    "# Flush data and close the producers\n",
+    "# # Flush data and close the producers\n",
     "postgres_producer.flush()\n",
     "postgres_producer.close()\n",
     "\n",
